GUI: improve color chooser, color options & misc
- Ensure recent pane in Color Choosers gets populated
- Option to reset color choices (Options tab)
- Fix capitalization & simplify  text in prompts
- Improve REPL's api function
- Update ffmpeg instructions
- misc cleanup